# devkit

./: .gitignore  CMakeLists.txt  build.bat  vcpkg.json
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  examples_basic.cpp
examples/viewports/: CMakeLists.txt  examples_viewports.cpp
include/devkit/: algorithms.h  asset_manager.h  devkit.h  graphics.cpp  graphics.h  log.h  util.h
src/: algorithms.cpp  devkit.cpp  gl_types.cpp  graphics.cpp  graphics_includes.h
